Added patch to swagger
