# docs/swagger.yaml
@@ -21,6 +21,13 @@ definitions:
       error:
         type: string
     type: object
+  internal_http_api.PatchProductRequest:
+    properties:
+      name:
+        type: string
+      price:
+        type: integer
+    type: object
   internal_http_api.UpdateProductRequest:
     properties:
       name:
@@ -124,6 +131,48 @@ paths:
           schema:
             $ref: '#/definitions/internal_http_api.ErrorResponse'
       summary: Get a product by ID
+      tags:
+      - products
+    patch:
+      consumes:
+      - application/json
+      description: Partially updates a product by ID
+      parameters:
+      - description: Product ID
+        in: path
+        name: id
+        required: true
+        type: string
+      - description: Fields to update
+        in: body
+        name: payload
+        required: true
+        schema:
+          $ref: '#/definitions/internal_http_api.PatchProductRequest'
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/github_com_v-kuu_mini-marketplace_internal_model.Product'
+        "400":
+          description: Bad Request
+          schema:
+            $ref: '#/definitions/internal_http_api.ErrorResponse'
+        "404":
+          description: Not Found
+          schema:
+            $ref: '#/definitions/internal_http_api.ErrorResponse'
+        "408":
+          description: Request Timeout
+          schema:
+            $ref: '#/definitions/internal_http_api.ErrorResponse'
+        "500":
+          description: Internal Server Error
+          schema:
+            $ref: '#/definitions/internal_http_api.ErrorResponse'
+      summary: Patch a product
       tags:
       - products
     put:
